slurm-4138002.out
--------------------------------------------------------------
Begin Slurm Prologue Wed Oct 18 16:24:00 CDT 2023 1697664240
Job ID:		4138002
Username:	l.peiwang
Partition:	tier2_cpu
End Slurm Prologue Wed Oct 18 16:24:00 CDT 2023 1697664240
--------------------------------------------------------------
/home/l.peiwang/.local/lib/python3.10/site-packages/nilearn/input_data/__init__.py:23: FutureWarning: The import path 'nilearn.input_data' is deprecated in version 0.9. Importing from 'nilearn.input_data' will be possible at least until release 0.13.0. Please import from 'nilearn.maskers' instead.
  warnings.warn(message, FutureWarning)
Traceback (most recent call last):
  File "/ceph/chpc/home/l.peiwang/Modality_Comparison_AD/cd.py", line 3, in <module>
    from main import nested_crossvalidation
  File "/ceph/chpc/home/l.peiwang/Modality_Comparison_AD/main.py", line 269
    for train_ix, test_ix in cv_outer.split(train_data_pet, train_label):
                                                                         ^
IndentationError: unindent does not match any outer indentation level
--------------------------------------------------------------
Begin Slurm Epilogue Wed Oct 18 16:24:07 CDT 2023 1697664247
Name                : ex
User                : l.peiwang
Partition           : tier2_cpu
Nodes               : highmem02
Cores               : 2
State               : COMPLETED
Submit              : 2023-10-18T16:23:59
Start               : 2023-10-18T16:24:00
End                 : 2023-10-18T16:24:05
Reserved Walltime   : 1-16:50:00
Used Walltime       :   00:00:05
Used CPU Time       :   00:00:01
% User (Computation): 85.62%
% System (I/O)      :  0.00%
Mem Reserved        : 53000M
Max Mem Used        : 0.00  (0.0)
Max Disk Write      : 0.00  (0.0)
Max Disk Read       : 0.00  (0.0)
Max-Mem-Used Node   : highmem02
Max-Disk-Write Node : highmem02
Max-Disk-Read Node  : highmem02
End Slurm Epilogue Wed Oct 18 16:24:07 CDT 2023 1697664247
--------------------------------------------------------------
